@@ -298,12 +298,13 @@ class TypeInfoTests:
                    'content_meta_type': 'Foo Content',
                    'factory' : 'cmf.foo',
                    'icon_expr' : 'string:${portal_url}/foo_icon_expr.gif',
-                   'add_view_expr': 'string:${folder_url}/foo_add_view'}
+                   'add_view_expr': 'string:${folder_url}/foo_add_view',
+                   'link_target': '_new'}
         ti = self._makeInstance(**ti_data)
         info_data = ti.getInfoData()
         self.assertEqual(len(info_data), 2)
 
-        self.assertEqual(len(info_data[0]), 9)
+        self.assertEqual(len(info_data[0]), 10)
         self.assertEqual(info_data[0]['id'], ti_data['id'])
         self.assertEqual(info_data[0]['category'], 'folder/add')
         self.assertEqual(info_data[0]['title'], ti_data['title'])
@@ -315,6 +316,7 @@ class TypeInfoTests:
         self.assertEqual(info_data[0]['visible'], True)
         self.assertEqual(info_data[0]['available'], ti._checkAvailable)
         self.assertEqual(info_data[0]['allowed'], ti._checkAllowed)
+        self.assertEqual(info_data[0]['link_target'], ti.link_target)
 
         self.assertEqual(set(info_data[1]),
                          set(['url', 'icon', 'available', 'allowed']))
@@ -329,7 +331,7 @@ class TypeInfoTests:
         info_data = ti.getInfoData()
         self.assertEqual(len(info_data), 2)
 
-        self.assertEqual(len(info_data[0]), 9)
+        self.assertEqual(len(info_data[0]), 10)
         self.assertEqual(info_data[0]['id'], ti_data['id'])
         self.assertEqual(info_data[0]['category'], 'folder/add')
         self.assertEqual(info_data[0]['title'], ti_data['title'])
@@ -339,6 +341,7 @@ class TypeInfoTests:
         self.assertEqual(info_data[0]['visible'], True)
         self.assertEqual(info_data[0]['available'], ti._checkAvailable)
         self.assertEqual(info_data[0]['allowed'], ti._checkAllowed)
+        self.assertEqual(info_data[0]['link_target'], '')
 
         self.assertEqual(set(info_data[1]), set(['available', 'allowed']))
 
